--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
+<meta name="baidu-site-verification" content="JWVLYjLb3V" />
+
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link rel="shortcut icon" href="https://samyinyue.github.io/favicon.ico?v=1599188869295">
 <link rel="stylesheet" href="https://samyinyue.github.io/styles/main.css">
